[package]
name = "append-only-vec"
version = "0.1.2"
authors = ["David Roundy <daveroundy@gmail.com>"]

edition = "2021"

description = "Append-only, concurrent vector"
license = "MIT OR Apache-2.0"
repository = "https://github.com/droundy/append-only-vec"

readme = "README.md"
categories = ["data-structures", "concurrency"]
keywords = ["frozen", "data-structure"]


[dependencies]

[dev-dependencies]

scaling = "0.1.3"
parking_lot = "0.12"

[[bench]]
name = "bench"
harness = false
